Update to digitial presence

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ sass:
 #email:
 twitter:            Solv3Consulting
 facebook:           Solv3Consulting
-github:             username
+github:             Solv3
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:           company/solv3-consulting-pvt-ltd
 #xing:              username
@@ -49,9 +49,9 @@ instagram:          username
 #tumblr:            username
 #pinterest:         username
 #foursquare:        username
-steam:              username
+#steam:              username
 #dribbble:          username
-#youtube:           username
+youtube:           username
 #soundcloud:        username
 #weibo:             username
 #flickr:            username
